@@ -1,0 +1,6 @@
+; Joomla! Project
+; Copyright (C) 2005 - 2012 Open Source Matters. All rights reserved.
+; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
+; Note : All ini files need to be saved as UTF-8
+
+TPL_ISIS_XML_DESCRIPTION="Continuing the Egyptian god/goddess theme (Khepri from 1.5 and Hathor from 1.6), Isis is the Joomla 3.0 admin template based on Bootstrap from Twitter and the launch of the Joomla User Interface library (JUI)."
