@@ -1,0 +1,23 @@
+; Joomla! Project
+; Copyright (C) 2005 - 2012 Open Source Matters. All rights reserved.
+; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
+; Note : All ini files need to be saved as UTF-8
+
+TPL_ISIS_CLEAR_CACHE="Clear Cache"
+TPL_ISIS_COLOR_DESC="Choose an overall color for the template"
+TPL_ISIS_COLOR_LABEL="Template Color"
+TPL_ISIS_EDIT_ACCOUNT="Edit Account"
+TPL_ISIS_FIELD_ADMIN_MENUS_DESC="If you intend to use Joomla Administrator on a monitor, set this to 'No'. It will prevent the collapse of the administrator menus when reducing the width of the window. Default is 'Yes'."
+TPL_ISIS_FIELD_ADMIN_MENUS_LABEL="Collapse Administrator Menu"
+TPL_ISIS_GLOBAL_CHECK_IN="Global Check-in"
+TPL_ISIS_GLOBAL_CONFIGURATION="Global Configuration"
+TPL_ISIS_INSTALLER="Installer"
+TPL_ISIS_ISFREESOFTWARE="Joomla is free software released under the GNU General Public License."
+TPL_ISIS_LOGO_DESC="Upload a custom logo for the admin template."
+TPL_ISIS_LOGO_LABEL="Logo"
+TPL_ISIS_LOGOUT="Logout"
+TPL_ISIS_PURGE_EXPIRED_CACHE="Purge Expired Cache"
+TPL_ISIS_SETTINGS="Settings"
+TPL_ISIS_SYSTEM_INFORMATION="System Information"
+TPL_ISIS_TOOLBAR="Toolbar"
+TPL_ISIS_XML_DESCRIPTION="Continuing the Egyptian god/goddess theme (Khepri from 1.5 and Hathor from 1.6), Isis is the Joomla 3.0 admin template based on Bootstrap from Twitter and the launch of the Joomla User Interface library (JUI)."
